pecobro/xpidl/XPIDLParser.py
# $ANTLR 3.0.1 /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g 2008-05-19 22:12:29

from antlr3 import *
from antlr3.compat import set, frozenset

from antlr3.tree import *



# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
FORWARD=7
UUIDPayload=46
LONG_LONG=24
UUID=36
InlineCHeader=35
CONST=6
CHAR=30
LineComment=48
PARAM=15
FLOAT=28
EOF=-1
WCHAR=31
Identifier=38
BlockComment=47
MODIFIERS=13
BOOLEAN=20
HexChar=41
UNSIGNED_LONG=26
INCLUDE=8
UNSIGNED_SHORT=25
DOUBLE=29
HexInteger=40
WhiteSpace=45
VOID=19
BODY=5
WSTRING=33
UNSIGNED_LONG_LONG=27
IdentifierPart=44
ATTR=4
PARAMS=16
I_UUID=11
DecimalChar=42
TYPEDEF=18
DecimalInteger=39
IdentifierStart=43
NATIVE=14
SHORT=22
Include=34
PARENTS=17
INTERFACE=10
INLINE=9
LONG=23
METHOD=12
Integer=37
OCTET=21
STRING=32

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>", 
    "ATTR", "BODY", "CONST", "FORWARD", "INCLUDE", "INLINE", "INTERFACE", 
    "I_UUID", "METHOD", "MODIFIERS", "NATIVE", "PARAM", "PARAMS", "PARENTS", 
    "TYPEDEF", "VOID", "BOOLEAN", "OCTET", "SHORT", "LONG", "LONG_LONG", 
    "UNSIGNED_SHORT", "UNSIGNED_LONG", "UNSIGNED_LONG_LONG", "FLOAT", "DOUBLE", 
    "CHAR", "WCHAR", "STRING", "WSTRING", "Include", "InlineCHeader", "UUID", 
    "Integer", "Identifier", "DecimalInteger", "HexInteger", "HexChar", 
    "DecimalChar", "IdentifierStart", "IdentifierPart", "WhiteSpace", "UUIDPayload", 
    "BlockComment", "LineComment", "'interface'", "';'", "'['", "','", "']'", 
    "':'", "'{'", "'}'", "'scriptable'", "'function'", "'object'", "'notxpcom'", 
    "'noscript'", "'('", "')'", "'const'", "'='", "'short'", "'long'", "'attribute'", 
    "'in'", "'out'", "'inout'", "'array'", "'retval'", "'shared'", "'size_is'", 
    "'native'", "'ref'", "'ptr'", "'nsid'", "'domstring'", "'utf8string'", 
    "'cstring'", "'astring'", "'typedef'", "'boolean'", "'void'", "'string'", 
    "'octet'", "'unsigned'", "'float'", "'double'", "'char'", "'wchar'", 
    "'wstring'", "'*'", "'/'", "'+'", "'-'", "'<<'"
]



class XPIDLParser(Parser):
    grammarFileName = "/home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g"
    tokenNames = tokenNames

    def __init__(self, input):
        Parser.__init__(self, input)
        self.ruleMemo = {}
        self.dfa9 = self.DFA9(
            self, 9,
            eot = self.DFA9_eot,
            eof = self.DFA9_eof,
            min = self.DFA9_min,
            max = self.DFA9_max,
            accept = self.DFA9_accept,
            special = self.DFA9_special,
            transition = self.DFA9_transition
            )




                
        self.adaptor = CommonTreeAdaptor()




    class idlFile_return(object):
        def __init__(self):
            self.start = None
            self.stop = None

            self.tree = None


    # $ANTLR start idlFile
    # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:84:1: idlFile : ( toplevel )* EOF ;
    def idlFile(self, ):

        retval = self.idlFile_return()
        retval.start = self.input.LT(1)

        root_0 = None

        EOF2 = None
        toplevel1 = None


        EOF2_tree = None

        try:
            try:
                # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:85:2: ( ( toplevel )* EOF )
                # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:85:4: ( toplevel )* EOF
                root_0 = self.adaptor.nil()

                # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:85:4: ( toplevel )*
                while True: #loop1
                    alt1 = 2
                    LA1_0 = self.input.LA(1)

                    if ((Include <= LA1_0 <= InlineCHeader) or LA1_0 == 49 or LA1_0 == 51 or LA1_0 == 84) :
                        alt1 = 1


                    if alt1 == 1:
                        # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:85:4: toplevel
                        self.following.append(self.FOLLOW_toplevel_in_idlFile158)
                        toplevel1 = self.toplevel()
                        self.following.pop()
                        if self.failed:
                            return retval
                        if self.backtracking == 0:
                            self.adaptor.addChild(root_0, toplevel1.tree)


                    else:
                        break #loop1


                EOF2 = self.input.LT(1)
                self.match(self.input, EOF, self.FOLLOW_EOF_in_idlFile161)
                if self.failed:
                    return retval



                retval.stop = self.input.LT(-1)

                if self.backtracking == 0:

                    retval.tree = self.adaptor.rulePostProcessing(root_0)
                    self.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)

            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return retval

    # $ANTLR end idlFile

    class toplevel_return(object):
        def __init__(self):
            self.start = None
            self.stop = None

            self.tree = None


    # $ANTLR start toplevel
    # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:88:1: toplevel : ( interface | typedef | nativeTypeDecl | include | inline );
    def toplevel(self, ):

        retval = self.toplevel_return()
        retval.start = self.input.LT(1)

        root_0 = None

        interface3 = None

        typedef4 = None

        nativeTypeDecl5 = None

        include6 = None

        inline7 = None



        try:
            try:
                # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:89:2: ( interface | typedef | nativeTypeDecl | include | inline )
                alt2 = 5
                LA2 = self.input.LA(1)
                if LA2 == 49:
                    alt2 = 1
                elif LA2 == 51:
                    LA2_2 = self.input.LA(2)

                    if (LA2_2 == UUID or (57 <= LA2_2 <= 61)) :
                        alt2 = 1
                    elif ((77 <= LA2_2 <= 83)) :
                        alt2 = 3
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return retval

                        nvae = NoViableAltException("88:1: toplevel : ( interface | typedef | nativeTypeDecl | include | inline );", 2, 2, self.input)

                        raise nvae

                elif LA2 == 84:
                    alt2 = 2
                elif LA2 == Include:
                    alt2 = 4
                elif LA2 == InlineCHeader:
                    alt2 = 5
                else:
                    if self.backtracking > 0:
                        self.failed = True
                        return retval

                    nvae = NoViableAltException("88:1: toplevel : ( interface | typedef | nativeTypeDecl | include | inline );", 2, 0, self.input)

                    raise nvae

                if alt2 == 1:
                    # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:89:4: interface
                    root_0 = self.adaptor.nil()

                    self.following.append(self.FOLLOW_interface_in_toplevel173)
                    interface3 = self.interface()
                    self.following.pop()
                    if self.failed:
                        return retval
                    if self.backtracking == 0:
                        self.adaptor.addChild(root_0, interface3.tree)


                elif alt2 == 2:
                    # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:90:4: typedef
                    root_0 = self.adaptor.nil()

                    self.following.append(self.FOLLOW_typedef_in_toplevel178)
                    typedef4 = self.typedef()
                    self.following.pop()
                    if self.failed:
                        return retval
                    if self.backtracking == 0:
                        self.adaptor.addChild(root_0, typedef4.tree)


                elif alt2 == 3:
                    # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:91:4: nativeTypeDecl
                    root_0 = self.adaptor.nil()

                    self.following.append(self.FOLLOW_nativeTypeDecl_in_toplevel183)
                    nativeTypeDecl5 = self.nativeTypeDecl()
                    self.following.pop()
                    if self.failed:
                        return retval
                    if self.backtracking == 0:
                        self.adaptor.addChild(root_0, nativeTypeDecl5.tree)


                elif alt2 == 4:
                    # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:92:4: include
                    root_0 = self.adaptor.nil()

                    self.following.append(self.FOLLOW_include_in_toplevel188)
                    include6 = self.include()
                    self.following.pop()
                    if self.failed:
                        return retval
                    if self.backtracking == 0:
                        self.adaptor.addChild(root_0, include6.tree)


                elif alt2 == 5:
                    # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:93:4: inline
                    root_0 = self.adaptor.nil()

                    self.following.append(self.FOLLOW_inline_in_toplevel193)
                    inline7 = self.inline()
                    self.following.pop()
                    if self.failed:
                        return retval
                    if self.backtracking == 0:
                        self.adaptor.addChild(root_0, inline7.tree)


                retval.stop = self.input.LT(-1)

                if self.backtracking == 0:

                    retval.tree = self.adaptor.rulePostProcessing(root_0)
                    self.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)

            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return retval

    # $ANTLR end toplevel

    class include_return(object):
        def __init__(self):
            self.start = None
            self.stop = None

            self.tree = None


    # $ANTLR start include
    # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:96:1: include : Include -> ^( INCLUDE Include ) ;
    def include(self, ):

        retval = self.include_return()
        retval.start = self.input.LT(1)

        root_0 = None

        Include8 = None

        Include8_tree = None
        stream_Include = RewriteRuleTokenStream(self.adaptor, "token Include")

        try:
            try:
                # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:97:2: ( Include -> ^( INCLUDE Include ) )
                # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:97:4: Include
                Include8 = self.input.LT(1)
                self.match(self.input, Include, self.FOLLOW_Include_in_include204)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_Include.add(Include8)
                # AST Rewrite
                # elements: Include
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                if self.backtracking == 0:

                    retval.tree = root_0

                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self.adaptor, "token retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self.adaptor, "token retval", None)


                    root_0 = self.adaptor.nil()
                    # 97:12: -> ^( INCLUDE Include )
                    # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:97:15: ^( INCLUDE Include )
                    root_1 = self.adaptor.nil()
                    root_1 = self.adaptor.becomeRoot(self.adaptor.createFromType(INCLUDE, "INCLUDE"), root_1)

                    self.adaptor.addChild(root_1, stream_Include.next())

                    self.adaptor.addChild(root_0, root_1)






                retval.stop = self.input.LT(-1)

                if self.backtracking == 0:

                    retval.tree = self.adaptor.rulePostProcessing(root_0)
                    self.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)

            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return retval

    # $ANTLR end include

    class inline_return(object):
        def __init__(self):
            self.start = None
            self.stop = None

            self.tree = None


    # $ANTLR start inline
    # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:100:1: inline : InlineCHeader -> ^( INLINE InlineCHeader ) ;
    def inline(self, ):

        retval = self.inline_return()
        retval.start = self.input.LT(1)

        root_0 = None

        InlineCHeader9 = None

        InlineCHeader9_tree = None
        stream_InlineCHeader = RewriteRuleTokenStream(self.adaptor, "token InlineCHeader")

        try:
            try:
                # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:101:2: ( InlineCHeader -> ^( INLINE InlineCHeader ) )
                # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:101:4: InlineCHeader
                InlineCHeader9 = self.input.LT(1)
                self.match(self.input, InlineCHeader, self.FOLLOW_InlineCHeader_in_inline223)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_InlineCHeader.add(InlineCHeader9)
                # AST Rewrite
                # elements: InlineCHeader
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                if self.backtracking == 0:

                    retval.tree = root_0

                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self.adaptor, "token retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self.adaptor, "token retval", None)


                    root_0 = self.adaptor.nil()
                    # 101:18: -> ^( INLINE InlineCHeader )
                    # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:101:21: ^( INLINE InlineCHeader )
                    root_1 = self.adaptor.nil()
                    root_1 = self.adaptor.becomeRoot(self.adaptor.createFromType(INLINE, "INLINE"), root_1)

                    self.adaptor.addChild(root_1, stream_InlineCHeader.next())

                    self.adaptor.addChild(root_0, root_1)






                retval.stop = self.input.LT(-1)

                if self.backtracking == 0:

                    retval.tree = self.adaptor.rulePostProcessing(root_0)
                    self.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)

            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return retval

    # $ANTLR end inline

    class interface_return(object):
        def __init__(self):
            self.start = None
            self.stop = None

            self.tree = None


    # $ANTLR start interface
    # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:104:1: interface options {backtrack=true; } : ( 'interface' validId ';' -> ^( FORWARD validId ) | ( '[' ( interfaceModifier ',' )* UUID ']' )? 'interface' validId ( ':' validIdList )? '{' interfaceBody '}' ';' -> ^( INTERFACE validId ^( I_UUID ( UUID )? ) ^( PARENTS ( validIdList )? ) ^( MODIFIERS ( interfaceModifier )* ) ^( BODY interfaceBody ) ) );
    def interface(self, ):

        retval = self.interface_return()
        retval.start = self.input.LT(1)

        root_0 = None

        string_literal10 = None
        char_literal12 = None
        char_literal13 = None
        char_literal15 = None
        UUID16 = None
        char_literal17 = None
        string_literal18 = None
        char_literal20 = None
        char_literal22 = None
        char_literal24 = None
        char_literal25 = None
        validId11 = None

        interfaceModifier14 = None

        validId19 = None

        validIdList21 = None

        interfaceBody23 = None


        string_literal10_tree = None
        char_literal12_tree = None
        char_literal13_tree = None
        char_literal15_tree = None
        UUID16_tree = None
        char_literal17_tree = None
        string_literal18_tree = None
        char_literal20_tree = None
        char_literal22_tree = None
        char_literal24_tree = None
        char_literal25_tree = None
        stream_49 = RewriteRuleTokenStream(self.adaptor, "token 49")
        stream_56 = RewriteRuleTokenStream(self.adaptor, "token 56")
        stream_55 = RewriteRuleTokenStream(self.adaptor, "token 55")
        stream_51 = RewriteRuleTokenStream(self.adaptor, "token 51")
        stream_UUID = RewriteRuleTokenStream(self.adaptor, "token UUID")
        stream_52 = RewriteRuleTokenStream(self.adaptor, "token 52")
        stream_53 = RewriteRuleTokenStream(self.adaptor, "token 53")
        stream_54 = RewriteRuleTokenStream(self.adaptor, "token 54")
        stream_50 = RewriteRuleTokenStream(self.adaptor, "token 50")
        stream_interfaceBody = RewriteRuleSubtreeStream(self.adaptor, "rule interfaceBody")
        stream_validId = RewriteRuleSubtreeStream(self.adaptor, "rule validId")
        stream_interfaceModifier = RewriteRuleSubtreeStream(self.adaptor, "rule interfaceModifier")
        stream_validIdList = RewriteRuleSubtreeStream(self.adaptor, "rule validIdList")
        try:
            try:
                # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:106:2: ( 'interface' validId ';' -> ^( FORWARD validId ) | ( '[' ( interfaceModifier ',' )* UUID ']' )? 'interface' validId ( ':' validIdList )? '{' interfaceBody '}' ';' -> ^( INTERFACE validId ^( I_UUID ( UUID )? ) ^( PARENTS ( validIdList )? ) ^( MODIFIERS ( interfaceModifier )* ) ^( BODY interfaceBody ) ) )
                alt6 = 2
                LA6_0 = self.input.LA(1)

                if (LA6_0 == 49) :
                    LA6_1 = self.input.LA(2)

                    if (LA6_1 == Identifier) :
                        LA6_3 = self.input.LA(3)

                        if ((54 <= LA6_3 <= 55)) :
                            alt6 = 2
                        elif (LA6_3 == 50) :
                            alt6 = 1
                        else:
                            if self.backtracking > 0:
                                self.failed = True
                                return retval

                            nvae = NoViableAltException("104:1: interface options {backtrack=true; } : ( 'interface' validId ';' -> ^( FORWARD validId ) | ( '[' ( interfaceModifier ',' )* UUID ']' )? 'interface' validId ( ':' validIdList )? '{' interfaceBody '}' ';' -> ^( INTERFACE validId ^( I_UUID ( UUID )? ) ^( PARENTS ( validIdList )? ) ^( MODIFIERS ( interfaceModifier )* ) ^( BODY interfaceBody ) ) );", 6, 3, self.input)

                            raise nvae

                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return retval

                        nvae = NoViableAltException("104:1: interface options {backtrack=true; } : ( 'interface' validId ';' -> ^( FORWARD validId ) | ( '[' ( interfaceModifier ',' )* UUID ']' )? 'interface' validId ( ':' validIdList )? '{' interfaceBody '}' ';' -> ^( INTERFACE validId ^( I_UUID ( UUID )? ) ^( PARENTS ( validIdList )? ) ^( MODIFIERS ( interfaceModifier )* ) ^( BODY interfaceBody ) ) );", 6, 1, self.input)

                        raise nvae

                elif (LA6_0 == 51) :
                    alt6 = 2
                else:
                    if self.backtracking > 0:
                        self.failed = True
                        return retval

                    nvae = NoViableAltException("104:1: interface options {backtrack=true; } : ( 'interface' validId ';' -> ^( FORWARD validId ) | ( '[' ( interfaceModifier ',' )* UUID ']' )? 'interface' validId ( ':' validIdList )? '{' interfaceBody '}' ';' -> ^( INTERFACE validId ^( I_UUID ( UUID )? ) ^( PARENTS ( validIdList )? ) ^( MODIFIERS ( interfaceModifier )* ) ^( BODY interfaceBody ) ) );", 6, 0, self.input)

                    raise nvae

                if alt6 == 1:
                    # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:106:4: 'interface' validId ';'
                    string_literal10 = self.input.LT(1)
                    self.match(self.input, 49, self.FOLLOW_49_in_interface249)
                    if self.failed:
                        return retval
                    if self.backtracking == 0:
                        stream_49.add(string_literal10)
                    self.following.append(self.FOLLOW_validId_in_interface251)
                    validId11 = self.validId()
                    self.following.pop()
                    if self.failed:
                        return retval
                    if self.backtracking == 0:
                        stream_validId.add(validId11.tree)
                    char_literal12 = self.input.LT(1)
                    self.match(self.input, 50, self.FOLLOW_50_in_interface253)
                    if self.failed:
                        return retval
                    if self.backtracking == 0:
                        stream_50.add(char_literal12)
                    # AST Rewrite
                    # elements: validId
                    # token labels: 
                    # rule labels: retval
                    # token list labels: 
                    # rule list labels: 
                    if self.backtracking == 0:

                        retval.tree = root_0

                        if retval is not None:
                            stream_retval = RewriteRuleSubtreeStream(self.adaptor, "token retval", retval.tree)
                        else:
                            stream_retval = RewriteRuleSubtreeStream(self.adaptor, "token retval", None)


                        root_0 = self.adaptor.nil()
                        # 107:3: -> ^( FORWARD validId )
                        # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:107:6: ^( FORWARD validId )
                        root_1 = self.adaptor.nil()
                        root_1 = self.adaptor.becomeRoot(self.adaptor.createFromType(FORWARD, "FORWARD"), root_1)

                        self.adaptor.addChild(root_1, stream_validId.next())

                        self.adaptor.addChild(root_0, root_1)





                elif alt6 == 2:
                    # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:108:4: ( '[' ( interfaceModifier ',' )* UUID ']' )? 'interface' validId ( ':' validIdList )? '{' interfaceBody '}' ';'
                    # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:108:4: ( '[' ( interfaceModifier ',' )* UUID ']' )?
                    alt4 = 2
                    LA4_0 = self.input.LA(1)

                    if (LA4_0 == 51) :
                        alt4 = 1
                    if alt4 == 1:
                        # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:108:5: '[' ( interfaceModifier ',' )* UUID ']'
                        char_literal13 = self.input.LT(1)
                        self.match(self.input, 51, self.FOLLOW_51_in_interface269)
                        if self.failed:
                            return retval
                        if self.backtracking == 0:
                            stream_51.add(char_literal13)
                        # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:108:9: ( interfaceModifier ',' )*
                        while True: #loop3
                            alt3 = 2
                            LA3_0 = self.input.LA(1)

                            if ((57 <= LA3_0 <= 61)) :
                                alt3 = 1


                            if alt3 == 1:
                                # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:108:10: interfaceModifier ','
                                self.following.append(self.FOLLOW_interfaceModifier_in_interface272)
                                interfaceModifier14 = self.interfaceModifier()
                                self.following.pop()
                                if self.failed:
                                    return retval
                                if self.backtracking == 0:
                                    stream_interfaceModifier.add(interfaceModifier14.tree)
                                char_literal15 = self.input.LT(1)
                                self.match(self.input, 52, self.FOLLOW_52_in_interface274)
                                if self.failed:
                                    return retval
                                if self.backtracking == 0:
                                    stream_52.add(char_literal15)


                            else:
                                break #loop3


                        UUID16 = self.input.LT(1)
                        self.match(self.input, UUID, self.FOLLOW_UUID_in_interface278)
                        if self.failed:
                            return retval
                        if self.backtracking == 0:
                            stream_UUID.add(UUID16)
                        char_literal17 = self.input.LT(1)
                        self.match(self.input, 53, self.FOLLOW_53_in_interface280)
                        if self.failed:
                            return retval
                        if self.backtracking == 0:
                            stream_53.add(char_literal17)



                    string_literal18 = self.input.LT(1)
                    self.match(self.input, 49, self.FOLLOW_49_in_interface284)
                    if self.failed:
                        return retval
                    if self.backtracking == 0:
                        stream_49.add(string_literal18)
                    self.following.append(self.FOLLOW_validId_in_interface286)
                    validId19 = self.validId()
                    self.following.pop()
                    if self.failed:
                        return retval
                    if self.backtracking == 0:
                        stream_validId.add(validId19.tree)
                    # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:108:65: ( ':' validIdList )?
                    alt5 = 2
                    LA5_0 = self.input.LA(1)

                    if (LA5_0 == 54) :
                        alt5 = 1
                    if alt5 == 1:
                        # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:108:66: ':' validIdList
                        char_literal20 = self.input.LT(1)
                        self.match(self.input, 54, self.FOLLOW_54_in_interface289)
                        if self.failed:
                            return retval
                        if self.backtracking == 0:
                            stream_54.add(char_literal20)
                        self.following.append(self.FOLLOW_validIdList_in_interface291)
                        validIdList21 = self.validIdList()
                        self.following.pop()
                        if self.failed:
                            return retval
                        if self.backtracking == 0:
                            stream_validIdList.add(validIdList21.tree)



                    char_literal22 = self.input.LT(1)
                    self.match(self.input, 55, self.FOLLOW_55_in_interface298)
                    if self.failed:
                        return retval
                    if self.backtracking == 0:
                        stream_55.add(char_literal22)
                    self.following.append(self.FOLLOW_interfaceBody_in_interface300)
                    interfaceBody23 = self.interfaceBody()
                    self.following.pop()
                    if self.failed:
                        return retval
                    if self.backtracking == 0:
                        stream_interfaceBody.add(interfaceBody23.tree)
                    char_literal24 = self.input.LT(1)
                    self.match(self.input, 56, self.FOLLOW_56_in_interface302)
                    if self.failed:
                        return retval
                    if self.backtracking == 0:
                        stream_56.add(char_literal24)
                    char_literal25 = self.input.LT(1)
                    self.match(self.input, 50, self.FOLLOW_50_in_interface304)
                    if self.failed:
                        return retval
                    if self.backtracking == 0:
                        stream_50.add(char_literal25)
                    # AST Rewrite
                    # elements: validIdList, validId, UUID, interfaceModifier, interfaceBody
                    # token labels: 
                    # rule labels: retval
                    # token list labels: 
                    # rule list labels: 
                    if self.backtracking == 0:

                        retval.tree = root_0

                        if retval is not None:
                            stream_retval = RewriteRuleSubtreeStream(self.adaptor, "token retval", retval.tree)
                        else:
                            stream_retval = RewriteRuleSubtreeStream(self.adaptor, "token retval", None)


                        root_0 = self.adaptor.nil()
                        # 110:3: -> ^( INTERFACE validId ^( I_UUID ( UUID )? ) ^( PARENTS ( validIdList )? ) ^( MODIFIERS ( interfaceModifier )* ) ^( BODY interfaceBody ) )
                        # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:110:6: ^( INTERFACE validId ^( I_UUID ( UUID )? ) ^( PARENTS ( validIdList )? ) ^( MODIFIERS ( interfaceModifier )* ) ^( BODY interfaceBody ) )
                        root_1 = self.adaptor.nil()
                        root_1 = self.adaptor.becomeRoot(self.adaptor.createFromType(INTERFACE, "INTERFACE"), root_1)

                        self.adaptor.addChild(root_1, stream_validId.next())
                        # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:110:26: ^( I_UUID ( UUID )? )
                        root_2 = self.adaptor.nil()
                        root_2 = self.adaptor.becomeRoot(self.adaptor.createFromType(I_UUID, "I_UUID"), root_2)

                        # /home/visbrero/rev_control/git/pecobro/pecobro/xpidl/XPIDL.g:110:35: ( UUID )?
                        if stream_UUID.hasNext():
                            self.adaptor.addChild(root_2, stream_UUID.next())


                        stream_UUID.reset();
